copyparty/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: files-service
  namespace: copyparty
spec:
  ports:
    - protocol: TCP
      port: 3923
      targetPort: 3923
  type: ClusterIP
