copyparty/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: files-ingress
  namespace: copyparty
  annotations:
    nginx.ingress.kubernetes.io/compute-full-forwarded-for: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: files.becutewith.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: files-service
                port:
                  number: 3923
